2011-10-20  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/trade.c: make reindent

2011-10-18  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/game-rules.c: Turn off pirate when there are no ships.
	* client/gtk/trade.c: Fix compiler warning.
	* configure.ac, client/gtk/notification.c: Backport of libnotify for
	Debian Stable.

2011-10-17  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, client/gtk/interface.c, client/gtk/notification.c,
	client/gtk/notification.h, client/gtk/quote.c, client/gtk/trade.c,
	client/gtk/offline.c, client/gtk/gui.c, client/gtk/Makefile.am: Added
	notifications. Many thanks to Patrick <ppa.work@gmail.com> who wrote
	the basis for the patch.

2011-09-18  Roland Clobus <rclobus@rclobus.nl>
	* server/robber.c: Fix a crash when moving the pirate before a robber
	was visible.

2011-09-10  Roland Clobus <rclobus@rclobus.nl>
	* server/gtk/main.c: Fit the server in 1024x768.

2011-08-18  Micah Bunting <Amnykon@gmail.com>
	* client/gtk/trade.c: Follow GNOME HIG (no frames)
	* editor/gtk/editor.c, common/gtk/common_gtk.c,
	common/gtk/common_gtk.h: Move build_frames to common location.
	* server/gtk/main.c: Follow GNOME HIG (no frames)
	* client/gtk/identity.c: Code simplification.

2011-08-10  Micah Bunting <Amnykon@gmail.com>
	* server/gtk/main.c: Code cleanup.

2011-08-05  Micah Bunting <Amnykon@gmail.com>
	* editor/gtk/editor.c: Follow GNOME HIG (no frames)

2011-08-03  Roland Clobus <rclobus@rclobus.nl>
	* client/ai/greedy.c: Fix compiler warnings about mixed enums.

2011-07-25  Micah Bunting <Amnykon@gmail.com>
	* editor/gtk/editor.c, client/gtk/gui.c: Add fullscreen.

2011-07-25  Roland Clobus <rclobus@rclobus.nl>
	* Makefile.am, client/gtk/frontend.h, client/gtk/resource-view.gob,
	client/gtk/resource.c, client/gtk/legend.c, client/gtk/gui.c,
	client/gtk/Makefile.am, client/gtk/gui.h: Move all display functions of
	resources to resource-view.gob. Also fix the .gob make rules. Also use